--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-image-optimizer": "^1.6"
+        "olimortimer/laravelshoppingcart": "^5.0",
+        "spatie/laravel-image-optimizer": "^1.6",
+        "hardevine/shoppingcart": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
