--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "hardevine/shoppingcart": "^3.0",
         "intervention/image": "^2.7",
         "laravel/framework": "^8.40",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "olimortimer/laravelshoppingcart": "^5.0",
-        "spatie/laravel-image-optimizer": "^1.6",
-        "hardevine/shoppingcart": "^3.0"
+        "spatie/laravel-image-optimizer": "^1.6"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
