--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "hardevine/shoppingcart": "^3.0",
         "intervention/image": "^2.7",
+        "jorenvanhocht/laravel-share": "^4.1",
         "laravel/framework": "^8.40",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
